<resources>
    <string name="app_name">Student Attendance App</string>

    <string name="login">Welcome</string>
    <string name="login_prompt">Please login to continue</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="new_user">New? Click Here to Sign up!</string>

    <string name="name_prompt">Enter Your Name and University ID</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="uID">University ID</string>

    <string name="create_prompt">Enter Your University Email and Create A Password</string>
    <string name="email">University E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="next">Next</string>

    <string name="create_account">Create an Account</string>
    <string name="course_search">Course Search</string>
    <string name="course_instruct">Enter Course Information\n(Department, Course #, and Section #)</string>
    <string name="department">Dept.</string>
    <string name="course_num">Course</string>
    <string name="section">Section</string>

    <string name="course_list">Your Course List</string>
    <string name="course_prompt">Select A Course To Take Your Attendance</string>
    <string name="addCourse">Add A Course</string>

    <string name="present">PRESENT!</string>
    <string name="removeCourse">Remove Course</string>






</resources>
