<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="248dp"
        android:layout_marginBottom="42dp"
        android:onClick="save"
        android:text="@string/next" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/course_search"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/course_instruct"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="106dp"
        android:layout_height="38dp"
        android:layout_alignRight="@id/textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/department"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentEnd="true"

        android:text="@string/course_num"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:text="@string/section"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignleft="@id/textView1"
        android:layout_marginStart="68dp"
        android:layout_marginTop="208dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText4"
        android:layout_alignleft="@id/textView4"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText4"
        android:layout_alignleft="@id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <!--<ListView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/listView_event"-->
        <!--android:layout_below="@+id/textView2"-->
        <!--android:layout_above="@id/button"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="42dp"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:paddingLeft="25dp"-->
        <!--android:textFilterEnabled="false"-->
        <!--android:alpha=".7"-->
        <!--android:paddingRight="25dp"/>-->

</RelativeLayout>